--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env REACT_APP_ENV=development react-app-rewired start",
+    "build": "cross-env REACT_APP_ENV=production react-app-rewired build",
+    "build:stage": "cross-env REACT_APP_ENV=stage react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "react-app-rewired": "^2.1.8"
   }
 }
