--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "babel-plugin-import": "^1.13.3",
+    "caihrc": "^1.0.2",
     "customize-cra": "^1.0.0",
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
