--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "caihrc": "^1.0.2",
+    "crypto-js": "^4.0.0",
     "customize-cra": "^1.0.0",
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
+    "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
