--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "caihrc": "^1.0.2",
+    "classnames": "^2.2.6",
     "crypto-js": "^4.0.0",
     "customize-cra": "^1.0.0",
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
