--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "crypto-js": "^4.0.0",
     "customize-cra": "^1.0.0",
+    "i18next": "^19.8.4",
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
     "lodash": "^4.17.20",
@@ -20,7 +21,7 @@
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-intl": "^5.10.17",
+    "react-i18next": "^11.8.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "store": "^2.0.12",
